# Sudoku_App

./: .gitignore  CMakeLists.txt
cpp/: CMakeLists.txt
cpp/include/: DLX.h  solver.h
cpp/src/: solver.cpp  sudoku.cpp
scripts/: build.sh  clean.sh
